# expenses-manager

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml  mypy.ini  notebook_old_way.ipynb  pyproject.toml  setup.cfg
expenses_manager/: __init__.py  manage.py
expenses_manager/expenses_manager/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
