[tool.poetry]
name = "expenses-manager"
version = "0.1.0"
description = "The application to manage yours expenses better"
authors = ["Anna Kapłon <anna.kaplon19@o2.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.910"
Django = "^3.2.5"
django-stubs = "^1.8.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
